Envio de datos de una actividad a otra

--- a/1.Android Fundamentals/2. Activity.md
+++ b/1.Android Fundamentals/2. Activity.md
@@ -58,3 +58,46 @@ Intent recibe 2 parametros:
 
 - La funcion `startActivity()` iniciara la nueva actividad en la interfaz
 - `startActivity()` esta funcion recibe como parametro la referencia al objeto del contexto al cual se intenta acceder
+
+## Envio de datos de un actividad a otra
+
+El metodo `putExtra()` permite realizar el envio de datos desde una actividad a otra distinta.
+
+Este metodo recibe 2 parametros que representan la clave y el valor enviado, `putExtra(key, value)`.
+
+    class MainActivity : AppCompatActivity() {
+        private lateinit var playButton: Button
+
+        override fun onCreate(savedInstanceState: Bundle?) {
+            super.onCreate(savedInstanceState)
+            setContentView(R.layout.activity_main)
+
+            playButton = findViewById(R.id.button_go_to_activity)
+            playButton.setOnClickListener {
+                val intent = Intent(this@MainActivity, SecondActivity::class.java)
+
+                intent.putExtra("Message", "Hello World")
+                startActivity(intent)
+            }
+        }
+    }
+
+El metodo `intent.extras` permite que una actividad reciba datos de otra.
+
+    class SecondActivity : AppCompatActivity() {
+        private lateinit var secondActivityText: TextView
+
+        override fun onCreate(savedInstanceState: Bundle?) {
+            super.onCreate(savedInstanceState)
+            setContentView(R.layout.activity_second)
+
+            secondActivityText = findViewById(R.id.second_activity_text)
+
+            val data = intent.extras
+
+            data?.let {
+                val message = data.getString("Message")
+                secondActivityText.text = message
+            }
+        }
+    }
