Enviar datos de vuelta de una actividad a otra

--- a/1.Android Fundamentals/2. Activity.md
+++ b/1.Android Fundamentals/2. Activity.md
@@ -101,3 +101,56 @@ El metodo `intent.extras` permite que una actividad reciba datos de otra.
             }
         }
     }
+
+## Enviar datos de vuelta de una actividad a otra
+
+ActivityResultContracts.StartActivityForResult() se utiliza para iniciar una actividad y posteriormente recibir un resultado de vuelta. Dicho resultado es asignado a una variable, la cual en el ejemplo es definida como getResult.
+
+    class MainActivity : AppCompatActivity() {
+        private lateinit var playButton: Button
+        private lateinit var firstActivityText: TextView
+        private var message = "No message"
+
+        override fun onCreate(savedInstanceState: Bundle?) {
+            super.onCreate(savedInstanceState)
+            setContentView(R.layout.activity_main)
+
+            firstActivityText = findViewById(R.id.first_activity_text)
+            playButton = findViewById(R.id.button_go_to_activity)
+
+            val getResult =
+                registerForActivityResult(ActivityResultContracts.StartActivityForResult()) {
+                    // El objeto it recibe el codigo y los extras enviados desde la segunda actividad
+                    if (it.resultCode == Constants.RESULT_CODE) {
+                        message = it.data?.getStringExtra(Constants.INTENT_MESSAGE_KEY_TWO).toString()
+                        firstActivityText.text = message
+                    } else {
+                        firstActivityText.text = message
+                    }
+                }
+
+            playButton.setOnClickListener {
+                var intent = Intent(this@MainActivity, SecondActivity::class.java)
+
+                intent.putExtra("Message", "Message from main activity")
+
+                getResult.launch(intent)
+            }
+        }
+    }
+
+`geResult.launch()` inicializa una actividad con un intent especifico. En el ejemplo anterior se iniciara la actividad definida como segundo parametro en la definicion de la clase `Intent()`.
+
+El codigo de la segunda actividad contiene una funcion que controla el evento mediante el cual a traves de un boton se envian las datos de vuelta a la primera actividad.
+
+El metodo `setResult()` envia el codigo que sera evauluado en la primera actividad mediante la propiedad `resultCode` del objeto que recibe los datos de vuelta.
+
+    buttonGoBack = findViewById(R.id.button_go_back)
+
+    buttonGoBack.setOnClickListener {
+        intent.putExtra(Constants.INTENT_MESSAGE_KEY_TWO, "Hello From the Second Activity")
+        setResult(Constants.RESULT_CODE, intent)
+
+        // El metodo finish() finaliza detiene la ejecucion de la actividad y permite obtener nuevamente la visualizacion de la actividad que recibira los datos de vuelta.
+        finish()
+    }
