Definicion del metodo finish()

--- a/1.Android Fundamentals/2. Activity.md
+++ b/1.Android Fundamentals/2. Activity.md
@@ -151,6 +151,6 @@ El metodo `setResult()` envia el codigo que sera evauluado en la primera activid
         intent.putExtra(Constants.INTENT_MESSAGE_KEY_TWO, "Hello From the Second Activity")
         setResult(Constants.RESULT_CODE, intent)
 
-        // El metodo finish() finaliza detiene la ejecucion de la actividad y permite obtener nuevamente la visualizacion de la actividad que recibira los datos de vuelta.
+        // El metodo finish() finaliza  a ejecucion de la actividad y permite obtener nuevamente la visualizacion de la actividad que recibira los datos de vuelta.
         finish()
     }
