Conceptos basicos en el desarrollo de aplicaciones Android

--- a/1.Android Fundamentals/1. Paquetes e importaciones.md
+++ b/1.Android Fundamentals/1. Paquetes e importaciones.md
@@ -1,18 +1,20 @@
 Los paquetes permiten agrupar codigo relacionado en un mismo directorio.
 
-El nombre habitual de los paquetes es  `com.example`
+El nombre habitual de los paquetes inicia con `com.example`, seguido del nombre del paquete
 
     -| src
         -| com.example.package_name_first
             ...
         -| com.example.package_name_two
 
-Las importaciones se realizan a traves de `import`
+Las importaciones se realizan mediante la palabra clave `import`
 
     import com.example.classes.User
 
 En el anterior fragmento de codigo se realiza la importacion de la clase User, la cual se encuentra dentro del paquete `classes`.
 
-Este fragmento de codigo importa unicamente una unica clase de del paquete especificado. Para importar todo el codigo de un archivo, se utiliza el caracter `*`.
+El fragmento de codigo anterior importa unicamente una unica clase del paquete especificado.
+
+ Para importar todo el codigo de un archivo, se utiliza el caracter `*`.
 
     import com.example.*
