--- a/2.XML Layout/01.Etiquetas, elementos y atributos XML.md
+++ b/2.XML Layout/01.Etiquetas, elementos y atributos XML.md
@@ -51,7 +51,7 @@ Los componentes de la IU que hacen parte de Jetpack inician con `androidx`.
 
 Cada linea define un esquema o vocabulario para atributos relacionadas con esas palabras. El espacio de nombres `android:` marca atributos definidos por el sistema Android.
 
-__Todos los atributos del XML del diseño empiezan por uno de los espacios de nombres definidos en el elemento ConstraintLayout.__
+__Todos los atributos del XML del diseño empiezan por uno de los espacios de nombres definidos en el Layout principal.__
 
     <TextView
         android:text="Hello World!" />
