--- a/2.XML Layout/02.Compilar el diseño en XML.md
+++ b/2.XML Layout/02.Compilar el diseño en XML.md
@@ -1,6 +1,6 @@
-Los elementos secundarios de un `ConstraintLayout` necesitan restricciones de modo que el diseño sepa como organizar dichos elementos
+Los elementos secundarios de un `ConstraintLayout` necesitan restricciones `(constraint)` de modo que el diseño sepa como organizar dichos elementos.
 
-Estas restricciones son agregadas al elemento `EditText` para anclarlo en la esquina superior izquierda del elemento superior.
+En el siguiente ejemplo, se usan restricciones en el elemento `EditText` para anclarlo en la esquina superior izquierda del elemento padre.
 
 El nombre de las restricciones sigue el formato `layout_constraint<Source>_to_<Target>Of`, en donde el `<Source>` hace referencia a la vista actual, `<Target>` hace referencia al borde de la vista de destino.
 
@@ -16,7 +16,7 @@ El nombre de las restricciones sigue el formato `layout_constraint<Source>_to_<T
 
 En el fragmento anterior `layout_constraintStart_toStartOf` representa la restriccion horizontal, mientras que `layout_constraintTop_toTopOf` representa la restriccion vertical.
 
-### Aributos del elemento <EditText/ >
+### Aributos de los elementos
 
 #### id
 
@@ -24,7 +24,7 @@ Un ID de un recurso es un nombre de recurso unico para el elemento.
 
 Al agregar una `View` o cualquier otro recurso con el editor de diseño, Android Studio les asigna automaticamente un ID de recurso unico. Cuando se escribe de forma manual el XML, se debe declarar de forma explicita el ID del recurso.
 
-Los IDs se deben definir con el prefijo @+id, el cual le indica a Android Studio que se debe agregar ese ID como un nuevo ID de recurso.
+Los IDs se deben definir con el prefijo `@+id`, el cual le indica a Android Studio que se debe agregar ese ID como un nuevo ID de recurso.
 
 Los nombres de los ID deben ser descriptivos, escribirse en minuscula y separarse mediante `_` si contienen mas de una palabra.
 
@@ -38,10 +38,13 @@ En el fragmento de codigo anterior se ha definido el valor `wrap_content`, lo qu
 
 Para esta propiedad el valor asignado ha sido un ancho fijo definido mediante la unidad `dp`.
 
+
+### Atributos de texto
+
 #### typeInput
 
 Este atributo se utiliza para indicar que el elemento puede recibir un tipo de dato ingresado por el usuario, por ejemplo caracteres alfanumericos si el valor indicado es `text`, numeros enteros si el valor especificado es `number` o numeros decimales a traves del valor `numberDecimal`.
 
 #### hint
 
-El valor especificado resulta util para indicarle al usuario alguna sugerencia sobre lo que debe ingresar en el campo.
+El valor especificado resulta util para indicarle al usuario alguna sugerencia sobre lo que debe ingresar en el campo `(placeholder)`.
