--- a/2.XML Layout/07.Escuchadores de eventos.md
+++ b/2.XML Layout/07.Escuchadores de eventos.md
@@ -1,6 +1,6 @@
 ## setOnClickListener {}
 
-Mediante este metodo es posible ejecutar un bloque de codigo al hacer click sobre un widget de la interfaz
+Mediante este metodo es posible ejecutar un bloque de codigo al hacer click sobre un widget de la interfaz.
 
     var lateinit button: Button
 
