--- a/3.Jetpack Compose/3. Estado/1.remember.md
+++ b/3.Jetpack Compose/3. Estado/1.remember.md
@@ -1,8 +1,12 @@
-El estado en una aplicacion de Android se asigna mediante la palabra clave `remember`.
+El estado en una aplicacion de Android se asigna a una variable. Mediante la palabra funcion `mutableStateOf()` se inicializa el estado de la aplicacion recibiendolo como parametro, ademas de que se utiliza dicha funcion de que dicha variable es un estado que puede cambiar durante la ejecucion del programa.
+
+La palabra clave `remember` permite que el estado anterior asignado a la variable sea mantenido y se pueda acceder en la siguiente recomposicion del arbol de componentes.
+
+Al alterarse el estado, se inicia el proceso de recomposicion del componente de la interfaz asociado a dicho estado.
 
     @Composable
     fun HandleState() {
-        val state by remember {
+        var state by remember {
             mutableStateOf(0)
         }
 
@@ -17,6 +21,6 @@ El estado en una aplicacion de Android se asigna mediante la palabra clave `reme
         }
     }
 
-En el anterior fragmento de codigo, el estado inicial de state es 0.
+En el anterior fragmento de codigo, el estado inicial de `state` es 0.
 
-Mediante el evento `onClick` del componente `Button` se incrementa en 1 el valor del estado almacenado en state.
+Mediante el evento `onClick` del componente `Button` se incrementa en 1 el valor del estado almacenado en `state`.
