--- a/1.Android Fundamentals/2. Activity.md
+++ b/1.Android Fundamentals/2. Activity.md
@@ -9,36 +9,38 @@
             }
         }
 
-La funcion onCreate() es sobreescrita para establecer el contexto con el diseño que sera mostrado al usuario, en este caso mediante el metodo `setContentView()`.
+La funcion `onCreate()` es sobreescrita por defecto al crear una nueva aplicacion de Android, para establecer el contexto con el diseño que sera mostrado al usuario, en este caso mediante el metodo `setContentView()`, el cual como parametro recibe el layout que representa la interfaz grafica de la actividad.
 
 ## Ciclo de vida de una actividad
 
-Secuencia de pasos que va siguiendo la aplicacion cuando es lanzada.
+El ciclo de vida de una actividad, representa la secuencia de pasos que va siguiendo la aplicacion cuando es lanzada y mostrada al usuario.
 
-- Las fases del ciclo de vida de la aplicacion son llamadas por el sistema
+- Las fases del ciclo de vida de la aplicacion son llamadas por el sistema de forma ordenada.
 
-Cuando la aplicacion es lanzada por primera vez, se invoca la funcion `onCreate()`
+Cuando la aplicacion es lanzada por primera vez, se invoca la funcion `onCreate()`.
 
-En la funcion `onCreate()` principalmente se configuran los componentes de la IU y se conectan los objetos con los componentes de la IU mediante el metodo `findViewById()`.
+En la funcion `onCreate()` principalmente se configuran los componentes de la IU y se conectan los objetos con los componentes de la IU mediante el metodo `findViewById()`. El metodo `findViewById()` recibe como parametro el id de un componente del layout.
+
+    val button = findViewById(R.id.main_button)
 
 - `onStart()`
 - `onResume()`
 
-Una vez pasadas las 3 fases anteriores, la actividad es ejecutada.
+Una vez ejecutada la funcion `onResume()`, la actividad es ejecutada y mostrada al usuario.
 
-Si el usuario abandona la actividad, se invocan los metodos:
+Si el usuario abandona la actividad, se invocan los siguientes metodos:
 
-- `onPause()`: La actividad ya no es visible, ya que otra actividad es llamada
-- `onStop()`: La actividad ya no es visible
+- `onPause()`: La actividad no es visible, ya que otra actividad es invocada.
+- `onStop()`: La actividad deja de mostrarse en la interfaz.
 - `onDestroy()`: La actividad es finalizada o esta siendo destruida por el sistema.
 
 ## Iniciando actividades
 
-Para pasar a una nueva actividad se utiliza la clase `Intent`.
+Para desplazarse de una nueva actividad a otra se utiliza la clase `Intent`.
 
 Intent recibe 2 parametros:
-- El contexto de la actividad actual
-- La nueva actividad que sera mostrada en la interfaz, utilizando la sintaxis `NewActivityName::class.java`
+- El contexto de la actividad actual.
+- La nueva actividad que sera mostrada en la interfaz, utilizando la sintaxis `<NewActivityName>::class.java`
 
         class MainActivity : AppCompatActivity() {
             private lateinit var playButton: Button
@@ -56,12 +58,17 @@ Intent recibe 2 parametros:
             }
         }
 
-- La funcion `startActivity()` iniciara la nueva actividad en la interfaz
-- `startActivity()` esta funcion recibe como parametro la referencia al objeto del contexto al cual se intenta acceder
+- La funcion `startActivity()` se encarga de iniciar la nueva actividad en la interfaz.
+- Esta funcion recibe como parametro la referencia al objeto del contexto al cual se intenta acceder `startActivity(it)`.
+
+Mediante la siguiente sintaxis se define una variable a la cual se le asigna el `intent` utilizado para lanzar la nueva actividad.
+
+    var intent = Intent(this@MainActivity, SecondActivity::class.java)
+    startActivity(intent)
 
 ## Envio de datos de un actividad a otra
 
-El metodo `putExtra()` permite realizar el envio de datos desde una actividad a otra distinta.
+El metodo `putExtra()` permite realizar el envio de datos desde una actividad a otra.
 
 Este metodo recibe 2 parametros que representan la clave y el valor enviado, `putExtra(key, value)`.
 
@@ -76,13 +83,13 @@ Este metodo recibe 2 parametros que representan la clave y el valor enviado, `pu
             playButton.setOnClickListener {
                 val intent = Intent(this@MainActivity, SecondActivity::class.java)
 
-                intent.putExtra("Message", "Hello World")
+                intent.putExtra("MESSAGE", "Hello World")
                 startActivity(intent)
             }
         }
     }
 
-El metodo `intent.extras` permite que una actividad reciba datos de otra.
+Para acceder a los datos enviados de una actividad a otra, se utiliza el metodo `extras` del objeto `intent`.
 
     class SecondActivity : AppCompatActivity() {
         private lateinit var secondActivityText: TextView
@@ -96,7 +103,7 @@ El metodo `intent.extras` permite que una actividad reciba datos de otra.
             val data = intent.extras
 
             data?.let {
-                val message = data.getString("Message")
+                val message = data.getString("MESSAGE")
                 secondActivityText.text = message
             }
         }
