Configuracion de icono de accion del teclado

--- a/3.Jetpack Compose/1. Intro/05.Ingreso de texto.md
+++ b/3.Jetpack Compose/1. Intro/05.Ingreso de texto.md
@@ -15,3 +15,7 @@ La clase `KeyboardOptions` permite configurar el boton de accion del teclado.
 - ImeAction.Search :: Se usa cuando se requiere ejecutar una busqueda.
 - ImeAction.Send :: Se usa cuando el usuario quiere enviar el texto del campo de entrada.
 - ImeAction.Go :: Se usa cuando el usuario quiere navegar al destino del texto de entrada.
+
+        TextField(
+            keyboardOptions = KeyboardOptions(imeAction = ImeAction.send)
+        )
