Iconos de selector

--- a/3.Jetpack Compose/1. Intro/05.Ingreso de texto.md
+++ b/3.Jetpack Compose/1. Intro/05.Ingreso de texto.md
@@ -19,3 +19,13 @@ La clase `KeyboardOptions` permite configurar el boton de accion del teclado.
         TextField(
             keyboardOptions = KeyboardOptions(imeAction = ImeAction.send)
         )
+
+### Iconos
+
+Mediante la propiedad `leadingIcon` es posible añadir un icono descriptivo dentro de un campo de texto.
+
+Esta propiedad admite como valor un elemento componible `Icon`.
+
+    TextField(
+        leadingIcon = { Icon(painter = painterResource(R.drawable.icon_name), null) }
+    )
