--- a/1.Android Fundamentals/3. Iconos.md
+++ b/1.Android Fundamentals/3. Iconos.md
@@ -17,13 +17,30 @@ Para adaptarse a la variedad de densidades de pantalla de los distintos disposit
 
 Dentro de esta ruta se encuentra un directorio `mipmap` en donde se localizan los elementos del icono del selector de la aplicacion.
 
-Este directorio contiene los vectores del icono de selector en archivos webdp.
+Este directorio contiene los iconos de selector en archivos con formato `webdp`.
 
-- Para evitar que el icono de la aplicacion se vea borroso, se deben proporcionar diferentes imagenes de mapa de bits para dicho icono para cada densidad.
+- Para evitar que el icono de la aplicacion se vea borroso, se deben proporcionar diferentes imagenes de mapa de bits para dicho icono, adaptables para diferentes densidades de pantalla.
 
 ## Iconos adaptables
 
 A partir de la version de Android 8.0 (nivel de API 26) se admiten iconos adaptables.
 
+    Los iconos adaptables son declarados en el directorio de recursos `mipmap` que tiene el calificador de recursos -v26.
+
+    Los recursos de este directorio se aplican en dispositivos que ejecuten el nivel del API 26 (Android 8.0) o posterior.
+
+    Estos recursos seran ignorados en dispositivos que ejecuten la version 25 o anteriores, y en su lugar son reemplazados por los iconos agrupados por densidad.
+
 - El icono de la aplicacion se compone de 2 capas: una en primer plano y otra en segundo plano.
 - La capa en primer plano se apila sobre la capa en segundo plano.
+
+Los iconos adaptables son elementos de diseño vectorial, no tienen un tamaño fijo en pixeles.
+
+    ic_launcher.xml
+    ic_launcher_round.xml
+
+### Imagen de mapa de bits vs grafico vectorial
+
+Las imagenes de mapa de bits no comprenden mucho la imagen que contiene, excepto por la informacion de color de cada pixel.
+
+Un grafico vectorial sabe como dibujar las formas que definen una imagen. Estas instrucciones se componen de un conjunto de puntos, lineas y curvas, junto con la informacion de los colores.
